[package]
name = "lcy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.17", default_features = false, features = ["derive", "std"] }
nalgebra = "0.31.0"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false
