[package]
name = "lcy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="lcy_lib"
path="src/lib.rs"

[[bin]]
name="lcy"
path="src/main.rs"

[dependencies]
clap = { version = "3.1.18", default_features = false, features = ["derive", "std"] }
nalgebra = "0.31.0"
rand = "0.8.5"